* Fri May 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.0-0
- Removed all GDM and Dconf settings - BREAKING
  - Dconf has been moved to its own module
- Ensure that all settings are 100% GNOME specific
- Fixed a typo in the `dconf_hash` where `automount-never` was specified
  instead of `autorun-never`
- Add support for OEL and Puppet 5


* Wed Sep 20 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
- Add libxkbcommon-x11 to required package list for CentOS/RedHat 7.4.
- Remove unnecessary CentOS data-in-module files.  The OS family fact
  for CentOS is RedHat, so these files are not used.

* Mon Jun 05 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
- module was rewritten
  - takes advantage of the data in modules paradigm
  - has a single point of entry
- packages now default to 'installed' or the package_ensure catalyst
  from simp_options
- gnome::dconf::add
  - deprecated in favor of gnome::config::dconf
  - this class is now a temporary shim to ensure backwards compatibility
- gnome::config::dconf
  - allows setting more than one key/value pair (only one could be set
    in dconf::add)
  - class name is not a verb
  - dconf settings controlled by this class can be modified in data,
    including removing default settings


* Thu May 04 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.0.3-0
- Moved the simp dconf profile below the user profile so users can change
  their own settings in the desktop
- Confine puppet version in metadata.json

* Thu Apr 27 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.3-0
- Add dconf rule to not display user lists

* Mon Apr 17 2017 Nick Miller <nick.miller@onyxpoint.com> - 6.0.3-0
- Updated polkit setting to use the new defined type from the polkit module
- Added polkit dependency
- `dconf update` execs now catch failures

* Mon Mar 15 2017 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.0.2-0
- Fixed packages lists
- Fixed screensaver logic
- gconf type was not getting values correctly
